--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@react-native-community/datetimepicker": "^8.4.1",
     "@react-native-documents/picker": "^10.1.3",
     "@react-navigation/bottom-tabs": "^6.5.11",
-    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native": "^7.1.10",
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
     "@reduxjs/toolkit": "^1.9.2",
@@ -56,7 +56,7 @@
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-confetti-cannon": "^1.5.2",
-    "react-native-date-picker": "^5.0.8",
+    "react-native-date-picker": "^5.0.13",
     "react-native-dotenv": "^3.4.9",
     "react-native-edge-to-edge": "^1.5.1",
     "react-native-element-dropdown": "^2.12.0",
@@ -73,12 +73,12 @@
     "react-native-pager-view": "^6.2.3",
     "react-native-paper": "^5.12.3",
     "react-native-phone-number-input": "^2.1.0",
-    "react-native-reanimated": "^3.16.3",
+    "react-native-reanimated": "3.18.0",
     "react-native-rename": "^3.2.14",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^5.4.1",
-    "react-native-screens": "^4.3.0",
+    "react-native-screens": "^4.11.1",
     "react-native-simple-toast": "^3.2.0",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-svg": "^15.12.0",
